Corrected doc
